--- a/.github/workflows/bicepDeploy.yaml
+++ b/.github/workflows/bicepDeploy.yaml
@@ -12,6 +12,8 @@ jobs:
 
       # Checkout code
     - uses: actions/checkout@main
+      with:
+        ref: dev
 
       # Log into Azure
     - uses: azure/login@v1
