Trying to fix parameter json path
Trying to fix parameter json path

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,5 +27,5 @@ jobs:
         subscriptionId: ${{ secrets.AZURE_SUBSCRIPTION }}
         resourceGroupName: ${{ secrets.AZURE_RG }}
         template: ./appDeployment/main.bicep
-        parameters: ./appDeployment/bicepDeploy.parameters.json
+        parameters: ./bicepDeploy.parameters.json
         failOnStdErr: false
