--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,5 +27,5 @@ jobs:
         subscriptionId: ${{ secrets.AZURE_SUBSCRIPTION }}
         resourceGroupName: ${{ secrets.AZURE_RG }}
         template: ./appDeployment/main.bicep
-        parameters: ./devparameters.json
+        parameters: ./appDeployment/devparameters.json
         failOnStdErr: false
