added environment to the job

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,6 +24,7 @@ env:
 name: My awesome app deployment
 jobs:
   create-azure-resources:
+    environment: DEV
     runs-on: ubuntu-latest
     steps:
 
