--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,21 +6,20 @@ on:
           required: true
           type: environment
 env:
-  environment: {{github.event.inputs.environment}}
   parameters.location.value: 'east us'
-  parameters.storageAccountName.value: amstststg{{env.environment}}
-  parameters.appInsightName.value: amststappinsight{{env.environment}}
-  parameters.appServicePlanName.value: amstest{{env.environment}}-asp
-  parameters.functionAppName.value: amststfuncapp{{env.environment}}
-  parameters.keyVaultName.value: amststvault{{env.environment}}
+  parameters.storageAccountName.value: amstststg{{github.event.inputs.environment}}
+  parameters.appInsightName.value: amststappinsight{{github.event.inputs.environment}}
+  parameters.appServicePlanName.value: amstest{{github.event.inputs.environment}}-asp
+  parameters.functionAppName.value: amststfuncapp{{github.event.inputs.environment}}
+  parameters.keyVaultName.value: amststvault{{github.event.inputs.environment}}
   parameters.keyVaultSecretName.value: amstestsecret
-  parameters.vnetName.value: amstestVnet{{env.environment}}
-  parameters.subnetName.value: amstestSubnet{{env.environment}}
+  parameters.vnetName.value: amstestVnet{{github.event.inputs.environment}}
+  parameters.subnetName.value: amstestSubnet{{github.event.inputs.environment}}
   parameters.keyVaultSecretValue.value: topsecretvalue
   parameters.tenantId.value: 3a6e195f-a33b-4031-a66a-0434183703d9
   parameters.environment.value: DEV
-  parameters.resourceGroup.value: amsPune-{{env.environment}}
-  resourceGroup: amsPune-{{env.environment}}
+  parameters.resourceGroup.value: amsPune-{{github.event.inputs.environment}}
+  resourceGroup: amsPune-{{github.event.inputs.environment}}
 
 name: My App Deployment
 jobs:
