--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ env:
 name: My App Deployment
 jobs:
   create-azure-resources:
-    environment: DEV
+    environment: ${{ inputs.environment }}
     runs-on: ubuntu-latest
     steps:
 
