--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ env:
   parameters.subnetName.value: amstestSubnet${{ inputs.environment }}
   parameters.keyVaultSecretValue.value: ${{ secrets.KEYVAULTSECRET }}
   parameters.tenantId.value: 3a6e195f-a33b-4031-a66a-0434183703d9
-  parameters.environment.value: DEV
+  parameters.environment.value: ${{ inputs.environment }}
   parameters.resourceGroup.value: amsPune-${{ inputs.environment }}
   resourceGroup: amsPune-${{ inputs.environment }}
 
@@ -49,3 +49,18 @@ jobs:
         template: ./appDeployment/main.bicep
         parameters: ./appDeployment/parameters.json
         failOnStdErr: false
+  build-and-deploy-functionapp:
+    runs-on: windows-latest
+    environment: ${{ inputs.environment }}
+    steps:
+      # Checkout code
+    - name: 'Checkout code'
+    - uses: actions/checkout@v3
+
+    - name: 'Azure functions action'
+    - uses: Azure/functions-action@v1
+    - with:
+      app-name: ${{ parameters.functionAppName.value }}
+      package: ./FunctionApp
+      publish-profile: ${{ secrets.AZURE_FUNCTIONAPP_PUBLISH_PROFILE }}
+
