--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,12 +55,12 @@ jobs:
     steps:
       # Checkout code
     - name: 'Checkout code'
-    - uses: actions/checkout@v3
+      uses: actions/checkout@v3
 
     - name: 'Azure functions action'
-    - uses: Azure/functions-action@v1
-    - with:
-      app-name: ${{ parameters.functionAppName.value }}
-      package: ./FunctionApp
-      publish-profile: ${{ secrets.AZURE_FUNCTIONAPP_PUBLISH_PROFILE }}
+      uses: Azure/functions-action@v1
+      with:
+        app-name: ${{ parameters.functionAppName.value }}
+        package: ./FunctionApp
+        publish-profile: ${{ secrets.AZURE_FUNCTIONAPP_PUBLISH_PROFILE }}
 
