--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -60,7 +60,7 @@ jobs:
     - name: 'Azure functions action'
       uses: Azure/functions-action@v1
       with:
-        app-name: ${{ parameters.functionAppName.value }}
+        app-name: $parameters.functionAppName.value
         package: ./FunctionApp
         publish-profile: ${{ secrets.AZURE_FUNCTIONAPP_PUBLISH_PROFILE }}
 
