fix resource group

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,6 +19,7 @@ env:
   parameters.tenantId.value: 3a6e195f-a33b-4031-a66a-0434183703d9
   parameters.environment.value: ${{ inputs.environment }}
   parameters.resourceGroup.value: amsPune-${{ inputs.environment }}
+  resourceGroup: amsPune-${{ inputs.environment }}
 
 name: My App Deployment
 jobs:
@@ -45,7 +46,7 @@ jobs:
       uses: azure/arm-deploy@v1
       with:
         subscriptionId: ${{ secrets.AZURE_SUBSCRIPTION }}
-        resourceGroupName: $ {{ env.parameters.resourceGroup.value }}
+        resourceGroupName: $ {{ env.resourceGroup }}
         template: ./appDeployment/main.bicep
         parameters: ./appDeployment/parameters.json
         failOnStdErr: false
