--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -72,7 +72,7 @@ jobs:
       # Configure azure function app settings
     - uses: azure/appservice-settings@v1
       with:
-        app-name: $parameters.functionAppName.value
+        app-name: amststfuncappdev
         app-settings-json: '${{ secrets.APP_SETTINGS }}' 
         general-settings-json: '{"TestKey": "TestValue"}' #'General configuration settings as Key Value pairs'
       id: settings
