--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,7 +53,7 @@ jobs:
 
   build-and-deploy-functionapp:
     needs: create-azure-resources
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     environment: ${{ inputs.environment }}
     steps:
 
