--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,6 +20,7 @@ env:
   parameters.environment.value: ${{ inputs.environment }}
   parameters.resourceGroup.value: amsPune-${{ inputs.environment }}
   resourceGroup: amsPune-${{ inputs.environment }}
+  functionAppName: amststfuncapp${{ inputs.environment }}
 
 name: My App Deployment
 jobs:
@@ -65,6 +66,7 @@ jobs:
     - uses: azure/login@v1
       with:
         creds: ${{ secrets.AZURE_CREDENTIALS }}
+        enable-AzPSSession: true
 
       # Get publish profile
     - name: Get Function app publish profile
@@ -74,7 +76,7 @@ jobs:
         AZURE_CREDENTIALS : ${{ secrets.AZURE_CREDENTIALS }}
       with:
         resourceGroupName: ${{ env.resourceGroup }}
-        appName: $parameters.functionAppName.value
+        appName: ${{ env.functionAppName }}
 
       # Deploy Azure Functions to the function app
     - name: 'Azure functions action'
