--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -82,7 +82,7 @@ jobs:
     - name: 'Azure functions action'
       uses: Azure/functions-action@v1
       with:
-        app-name: $parameters.functionAppName.value
+        app-name: ${{ env.functionAppName }}
         package: ./FunctionApp
         #publish-profile: ${{ secrets.AZURE_FUNCTIONAPP_PUBLISH_PROFILE }}
         publish-profile: ${{ steps.publishprofile.outputs.profile }}
